--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": "^7.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0",
         "laravel/lumen-framework": "^6.0",
+        "restcord/restcord": "^0.5.0",
         "xpaw/php-minecraft-query": "^4.0"
     },
     "require-dev": {
